<resources>
    <string name="app_name">StudyBuddy</string>

    <!-- App Strings -->
    <string name="todo">TODO</string>
    <string name="Invite">INVITE</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Podešavanje</string>
    <string name="title_pages">Grupe</string>
    <string name="title_inbox">Poruke</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Register strings -->

    <string name="RegisterStyle">RegisterStyle</string>
    <string name="Welcome">Dobrodošli</string>
    <string name="Register_text1">Unesite svoj broj telefona i uživajte u StudyBuddy!</string>
    <string name="Register_text2">Ako nastavite, slažete se sa uslovima i odredbama, kao i sa privatnošću i politikom.</string>
    <string name="RegisterContinue">Nastavi</string>

    <!-- Verification strings -->

    <string name="Verification">Verifikacija</string>
    <string name="Verification_text1">Unesite kod koji ste dobili putem broja telefona</string>
    <string name="VerificationContinue">NASTAVI</string>

    <!-- CreateProfile strings -->
    <string name="CreateProfile">PROFIL</string>
    <string name="CreateProfileName">Ime</string>
    <string name="CreateProfileLastName">Prezime</string>
    <string name="CreateProfileBirthday">Datum rođenja</string>
    <string name="CreateProfileText">Recite nešto više o sebi...</string>
    <string name="CreateProfilePhoto">Fotografija</string>


    <!-- About strings -->
    <string name="Back">Nazad</string>
    <string name="About">O aplikaciji</string>
    <string name="AboutText">Naučite nešto o nama</string>
    <string name="AboutText2">Aplikacija je posebno dizajnirana za studente, tako da je usmerena ka njihovim potrebama, interesima i izazovima. Osim uobičajenih funkcionalnosti društvenih mreža, kao što su deljenje fotografija i komunikacija sa prijateljima, implementiran je algoritam koji omogućuje prikazivanje najboljeg predloga na početnoj stranici korisnicima. Na taj način je prikazano ono što žele da vide, na osnovu njihovih lajkova, komentara i deljenja. Aplikacija ima sekciju sa grupama (studentskim zajednicama), gde studenti imaju priliku da koriste i dele sadržaj za učenje.</string>

    <!-- PrivacyTerms strings -->
    <string name="PrivacyTerms">Privatnost i uslovi</string>
    <string name="PrivacyTermsText">Poštujemo vašu privatnost.</string>
    <string name="PrivacyTermsText2">Pružajući poseban fokus na studente, naša aplikacija je pažljivo oblikovana kako bi zadovoljila njihove potrebe, interese i izazove. No, osim pružanja korisnih i zabavnih funkcionalnosti, isto tako nam je izuzetno važna vaša privatnost i doživljaj sigurnosti tokom korišćenja.</string>
    <string name="PrivacyTermsUsers">Privatnost Korisnika:</string>
    <string name="PrivacyTermsUsersText">Vaši lični podaci su od suštinskog značaja i posvećujemo se njihovoj zaštiti. Bilo da je u pitanju vaša lična informacija, podaci o interesovanjima ili komunikacija s prijateljima, obezbeđujemo da se vaši podaci čuvaju i koriste isključivo u skladu s vašim odobrenjem i našim Pravilima o Privatnosti.</string>
    <string name="PrivacyTermsPersonalize">Pametna Personalizacija:</string>
    <string name="PrivacyTermsPersonalizeText">Aplikacija koristi inovativan algoritam kako bi vam prikazala sadržaj koji odražava vaše interesovanje. Ovaj algoritam uzima u obzir vaše lajkove, komentare i deljenja, kako bi se osiguralo da svaki put kada otvorite aplikaciju, budete okruženi sadržajem koji vas zaista zanima.</string>
    <string name="PrivacyTermsStudy">Grupni Sadžaj i Učenje:</string>
    <string name="PrivacyTermsStudyText">Naša aplikacija pruža mogućnost pridruživanja studentskim zajednicama, gde možete razmenjivati informacije i resurse za učenje. Ovde možete deliti i pronalaziti materijale koji su relevantni za vaše akademske ciljeve.</string>
    <string name="Terms">Uslovi Korišćenja:</string>
    <string name="TermsText">Koristeći našu aplikaciju, pristajete na naše Uslove Korišćenja. Ovi uslovi obezbeđuju smernice za korišćenje platforme i odgovornosti korisnika. Molimo vas da pažljivo pročitate ove uslove kako biste razumeli svoje prava i obaveze dok koristite našu aplikaciju. Sva pitanja ili nedoumice u vezi sa vašom privatnošću ili uslovima korišćenja su dobrodošli. Naša svrha je da pružimo kvalitetno iskustvo uz poštovanje vaše privatnosti i prava.</string>


    <!-- Settings strings -->
    <string name="Settings">PODEŠAVANJA</string>
    <string name="SettingsSwitchNotification">Obaveštenja</string>
    <string name="SettingsSwitchActivity">Aktivnost</string>
    <string name="SettingsPinnedMessage">Sačuvane poruke</string>

    <!-- PinnedMessages strings -->
    <string name="PinnedMessages">Sačuvane poruke</string>

    <!-- Profile strings -->
    <string name="ProfileChangePhoto">Promeni sliku</string>
    <string name="ProfileStorylineTitle">OBJAVE</string>

    <!-- Inbox strings -->
    <string name="Inbox">PORUKE</string>
    <string name="Search">Pretraga</string>

    <!-- Groups strings -->
    <string name="Groups">GRUPE</string>

    <!-- PageDetails strings -->
    <string name="PageDetails">Detalji</string>
    <string name="PageDetailsName">Ime</string>
    <string name="PageDetailsDescription">Opis</string>
    <string name="PageDetailsMembers">Broj članova</string>
    <string name="PageDetailsAdmins">Admins</string>

    <!-- NewPage strings -->
    <string name="NewPage">Kreiraj grupu</string>
    <string name="NewPageName">Ime</string>
    <string name="NewPageDescription">Opis</string>
    <string name="NewPageButton">Kreiraj</string>

    <!-- Page strings -->
    <string name="PageNewPost">Nova objava</string>

    <!-- CreateGroup strings -->
    <string name="CreateGroup">Kreiraj</string>
    <string name="CreateGroupText1">Komunikacija u timu je uvek zabavnija!</string>
    <string name="CreateGroupName">Ime grupe</string>
    <string name="CreateGroupText2">Postavi sliku (opciono)</string>

    <!-- NewChat strings -->
    <string name="NewChat">Započni razgovor sa prijateljima!</string>

    <!-- ChatSettings strings -->
    <string name="ChatSettings">Podesite ćaskanje</string>
    <string name="ChatSettingsMute">Utišaj</string>
    <string name="ChatSettingsChannel">Podgrupe</string>
    <string name="ChatSettingsChannelName">Ime podgrupe</string>

    <!-- UserProfile strings -->
    <string name="UserProfile">PROFIL</string>
    <string name="UserProfileFollow">Prati</string>
    <string name="UserProfileUnFollow">Ne prati više</string>

    <!-- Invite strings -->
    <string name="InviteFriends">Pozovi prijatelje</string>

    <!-- NewPost strings -->
    <string name="NewPost">Nova objava</string>
    <string name="NewPostInputText">Unesite tekst...</string>
    <string name="NewPostPostDescription">Dodajte opis...</string>
    <string name="NewPostText1">Dodaj lokaciju, hashtags</string>
    <string name="NewPostText2">Napredne opcije</string>
    <string name="NewPostShare">Deli</string>
    <string name="NewPostComments">Komentari</string>
    <string name="NewPostButton">Objavi</string>

    <!-- ForwardMessage strings -->
    <string name="ForwardMessage">Prosledi poruku</string>
    <string name="ForwardMessageText">Prosledi poruku ostalim četovima!</string>
    <string name="ForwardMessageButton">Prosledi</string>

    <!-- ImagePicker strings -->
    <string name="ucrop_label_edit_photo">Uredi sliku</string>
    <string name="title_choose_image_provider">Odaberi</string>
    <string name="action_cancel">Nazad</string>
    <string name="title_gallery">Galerija</string>
    <string name="title_camera">Kamera</string>

</resources>