<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.NewPageActivity">

    <ImageView
        android:id="@+id/imageViewNewPage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/ic_rectangle_vectors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonBackNewPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary_color"
            app:srcCompat="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/backNewPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_3sdp"
            android:fontFamily="@font/poppins_title"
            android:text="@string/Back"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNewPage"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNewPage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagePhotoCreateGroup"
        app:layout_constraintVertical_bias="0.15">

        <EditText
            android:id="@+id/editTextNewPageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/NewPageName"
            android:inputType="textPersonName"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/editTextNewPageDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/custom_border"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:gravity="start|top"
            android:hint="@string/NewPageDescription"
            android:inputType="textMultiLine"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreatePage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/NewPageButton"
        android:fontFamily="@font/poppins_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pagePhotoCreateGroup"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_create_profile_vectors_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewPage" />

</androidx.constraintlayout.widget.ConstraintLayout>